--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,9 +49,9 @@
 :root {
   --radius: 0.625rem;
   --background: #fffcf3;
-  --foreground: #23695e;
-  --card: #fffcf3;
-  --card-foreground: #23695e;
+  --foreground: #4d585b;
+  --card: #FAF3DA;
+  --card-foreground: #124944;
   --popover: #fffcf3;
   --popover-foreground: #23695e;
   --primary: #23695e;
