--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,20 +46,25 @@
   --animate-marquee-vertical: marquee-vertical var(--duration) linear infinite;
   --animate-shiny-text: shiny-text 8s infinite;
   @keyframes shiny-text {
-  0%, 90%, 100% {
-    background-position: calc(-100% - var(--shiny-width)) 0;
+    0%,
+    90%,
+    100% {
+      background-position: calc(-100% - var(--shiny-width)) 0;
     }
-  30%, 60% {
-    background-position: calc(100% + var(--shiny-width)) 0;
+    30%,
+    60% {
+      background-position: calc(100% + var(--shiny-width)) 0;
     }
   }
 }
 
 :root {
   --radius: 0.625rem;
+  --nav-height-desktop: 118px;
+  --nav-height-mobile: 60px;
   --background: #fffcf3;
   --foreground: #4d585b;
-  --card: #FAF3DA;
+  --card: #faf3da;
   --card-foreground: #124944;
   --popover: #fffcf3;
   --popover-foreground: #23695e;
